--- a/tox.ini
+++ b/tox.ini
@@ -1,17 +1,4 @@
 [tox]
-envlist=py27,py33,pypy
+envlist=py27, py363
 [testenv]
-deps=sqlalchemy
 commands=python setup.py test
-[testenv:py27-mongo]
-basepython=python2.7
-deps=sqlalchemy
-     mongoengine
-[testenv:py33-mongo]
-basepython=python3.3
-deps=sqlalchemy
-     mongoengine
-[testenv:pypy-mongo]
-basepython=pypy
-deps=sqlalchemy
-     mongoengine
